<resources>
    <string name="app_name">DEMO</string>
    <string name="new_app_name">Portfolio</string>
    <string name="login">LOGIN</string>
    <string name="enter_ur_mobile_no">Enter ur mobile no.</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_yourself">Register Yourself</string>
</resources>