<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewActivity">

    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:src="@drawable/pro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_below="@id/img_Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_ur_mobile_no"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:hint="@string/enter_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_below="@id/etUsername"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="10" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/etPassword"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:text="@string/register_yourself"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
